2006-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-string.hh: String/std::string compatibility:
	Use NPOS for `not found' (iso -1), use ssize for length () and pos
	type.

	* flower/rational.cc: 
	* flower/include/rational.hh: 

	* flower/offset.cc: 
	* flower/include/offset.hh: 

	* flower/interval.cc: 
	* flower/include/interval.hh: 
	
	* flower/string-convert.cc: 
	* flower/include/string-convert.hh: Use std::string [interface].
	Update callers.

2006-01-25  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/index.html.in: clean up.

2006-01-25  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/putting.itely: another new untested doc section.

2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/: more imports.

	* scm/page.scm (make-page): add footer/header.
	(annotate-space-left): revise: only take page argument.
	(layout->page-init): new function.

	* scm/layout-page-layout.scm (write-page-breaks): preliminary
	version of the system/spacing/linebreak hack writing to the output

	* lily/prob-scheme.cc (LY_DEFINE): take optional 'key val args in ly:make-prob.

	* lily/grob-scheme.cc (LY_DEFINE): ly:spanner-get-bound -> ly:spanner-bound

2006-01-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/stencil.scm (annotate-y-interval): move from layout-page-layout.scm

	* scm/paper-system.scm (paper-system-annotate): new file. Handle paper-system.

	* scm/layout-page-layout.scm (optimal-page-breaks): move all page
	handling to page.scm

	* lily/prob-scheme.cc (LY_DEFINE): new file.
	(LY_DEFINE): functions ly:make-prob , ly:prob-type? , ly:prob-(set-)property(!)

	* lily/music-scheme.cc (LY_DEFINE): rewrite get/set property using
	prob functions.

	* lily/music.cc (derived_mark): derive Music from Prob.

	* lily/paper-system.cc (LY_DEFINE): derive from Prob.

	* lily/prob.cc (Module): Implement Prob (Property Object), object
	with shared and r/w property alists.  

	* lily/include/prob.hh (Module): new file. Declare Prob.
