@@ -1,3 +1,7 @@
+2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/lyric-engraver.cc (get_voice_to_lyrics): use NPOS everywhere.
+
 2006-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* flower/include/std-string.hh: String/std::string compatibility:
@@ -27,6 +31,9 @@
 
 2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* scm/layout-page-layout.scm (write-page-breaks): write
+	\spacingTweaks #ALIST. Handle grace timing.
+
 	* scm/: more imports.
 
 	* scm/page.scm (make-page): add footer/header.
@@ -36,9 +43,11 @@
 	* scm/layout-page-layout.scm (write-page-breaks): preliminary
 	version of the system/spacing/linebreak hack writing to the output
 
-	* lily/prob-scheme.cc (LY_DEFINE): take optional 'key val args in ly:make-prob.
+	* lily/prob-scheme.cc (LY_DEFINE): take optional 'key val args in
+	ly:make-prob.
 
-	* lily/grob-scheme.cc (LY_DEFINE): ly:spanner-get-bound -> ly:spanner-bound
+	* lily/grob-scheme.cc (LY_DEFINE): ly:spanner-get-bound ->
+	ly:spanner-bound
 
 2006-01-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
